<resources>
    <string name="app_name">ParkSmart</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">"Password "</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="block_string_1">Block 1</string>
    <string name="block_string_2">Block 3</string>
    <string name="block_string_3">Block 5</string>
    <string name="block_string_4">Block 2</string>
    <string name="block_string_5">block 4</string>
    <string name="block_string_6">Block 5</string>
    <string name="explore_string">Explore Empty Spaces</string>
    <string name="blank_space">space_image</string>
    <string name="blank_space_1">space_image</string>
    <string name="name">Name</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="reenter_password">re-enter Password</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="mobileNo">Mobile No.</string>
    <string name="register">Register</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="firebase_link">https://parksmart-414fd.firebaseio.com</string>
    <string name="parking_slot_no">Parking Slot No:</string>
    <string name="date">Date:</string>
    <string name="time">Time In:</string>
    <string name="Parking_status">Status:Not parked</string>
</resources>
